Fix `$`s on `[0]` lines

--- a/Applications/VK.app/Localizations/Arabic.lang
+++ b/Applications/VK.app/Localizations/Arabic.lang
@@ -28,7 +28,7 @@
 	userSubscribedToYou = "اشتركت فيك",
 	userIsYourFriend = "لديك أصدقاء",
 	
-	profileCounters = {
+	profileCounters = [
 		{
 			field = "متابعون",
 			description = "متابعون",
@@ -48,8 +48,8 @@
 		{
 			field = "صوتيات",
 			description = "صوتي",
-		},
-	},
+		}
+	],
 	profileShowAdditional = "اظهر التفاصيل",
 	profileHideAdditional = "إخفاء المعلومات التفصيلية",
 	profileTitleMainInformation = "معلومات اساسية",
@@ -83,7 +83,7 @@
 		alcohol = "OTN. ",
 		smoking = "OTN. ",
 	},
-	months = {
+	months = [
 		"كانون الثاني",
 		"شهر فبراير",
 		"مارس",
@@ -95,10 +95,10 @@
 		"شهر تسعة",
 		"اكتوبر",
 		"شهر نوفمبر",
-		"ديسمبر",
-	},
-	relationStatuses = {
-		{
+		"ديسمبر"
+	],
+	relationStatuses = [
+		[
 			"غير متزوج",
 			"أحصل على صديقة",
 			"مخطوب \\ مخطوبة",
@@ -107,9 +107,9 @@
 			"في البحث النشط",
 			"عاشق",
 			"في الزواج المدني",
-			[0] = "غير محدد $$$$",
-		},
-		{
+			[0] = "غير محدد "
+		],
+		[
 			"غير متزوج",
 			"احصل على صديق",
 			"مخطوب \\ مخطوبة",
@@ -118,10 +118,10 @@
 			"في البحث النشط",
 			"عاشق",
 			"في الزواج المدني",
-			[0] = "غير محدد $$$$",
-		},
-	},
-	personalPoliticalTypes = {
+			[0] = "غير محدد "
+		]
+	],
+	personalPoliticalTypes = [
 		"شيوعي",
 		"الاشتراكي",
 		"معتدل",
@@ -130,17 +130,17 @@
 		"ملكي",
 		"محافظ جدا",
 		"غير مبال",
-		"ليبرتاري",
-	},
-	personalPeopleMainTypes = {
+		"ليبرتاري"
+	],
+	personalPeopleMainTypes = [
 		"الذكاء والإبداع",
 		"العطف و الشرف",
 		"الجمال والصحة",
 		"القوة والثروة",
 		"الشجاعة والمثابرة",
-		"النكتة وحب الحياة",
-	},
-	personalLifeMainTypes = {
+		"النكتة وحب الحياة"
+	],
+	personalLifeMainTypes = [
 		"الأسرة والأطفال",
 		"الوظيفي والمال",
 		"الترفيه والاستجمام",
@@ -148,15 +148,15 @@
 		"تحسين العالم",
 		"تطوير الذات",
 		"الجمال والفن",
-		"الشهرة والتأثير",
-	},
-	personalBlyadTypes = {
+		"الشهرة والتأثير"
+	],
+	personalBlyadTypes = [
 		"حاد سلبي",
 		"نفي",
 		"مساومة",
 		"محايد",
-		"إيجابي",
-	},
+		"إيجابي"
+	],
 	
 	friends = "اصحاب",
 	friendsOnline = "الأصدقاء عبر الإنترنت",
