--- a/Applications/VK.app/Localizations/Belarusian.lang
+++ b/Applications/VK.app/Localizations/Belarusian.lang
@@ -28,7 +28,7 @@
 	userSubscribedToYou = "Падпісаны на вас",
 	userIsYourFriend = "У цябе ёсць сябры",
 	
-	profileCounters = {
+	profileCounters = [
 		{
 			field = "паслядоўнікаў",
 			description = "паслядоўнікаў",
@@ -48,8 +48,8 @@
 		{
 			field = "аўдыя",
 			description = "аўдыё",
-		},
-	},
+		}
+	],
 	profileShowAdditional = "Паказаць падрабязнасці",
 	profileHideAdditional = "Схаваць падрабязную інфармацыю",
 	profileTitleMainInformation = "Асноўная інфармацыя",
@@ -83,7 +83,7 @@
 		alcohol = "ОТН. ",
 		smoking = "ОТН. ",
 	},
-	months = {
+	months = [
 		"студзеня",
 		"лютага",
 		"марш",
@@ -95,10 +95,10 @@
 		"верасень",
 		"кастрычніка",
 		"лістапада",
-		"снежня",
-	},
-	relationStatuses = {
-		{
+		"снежня"
+	],
+	relationStatuses = [
+		[
 			"не жанаты",
 			"ёсць сяброўка",
 			"займаецца",
@@ -107,9 +107,9 @@
 			"у актыўным пошуку",
 			"палюбоўнік",
 			"у грамадзянскім шлюбе",
-			[0] = "невызначана$$$$",
-		},
-		{
+			[0] = "невызначана"
+		],
+		[
 			"не жанаты",
 			"ёсць сябар",
 			"займаецца",
@@ -118,10 +118,10 @@
 			"у актыўным пошуку",
 			"палюбоўнік",
 			"у грамадзянскім шлюбе",
-			[0] = "невызначана$$$$",
-		},
-	},
-	personalPoliticalTypes = {
+			[0] = "невызначана"
+		]
+	],
+	personalPoliticalTypes = [
 		"Камуністычная",
 		"Сацыялістычны",
 		"Умераны",
@@ -130,17 +130,17 @@
 		"Манархічны",
 		"Ультракансерватыўны",
 		"Абыякавы",
-		"Лібертарыянец",
-	},
-	personalPeopleMainTypes = {
+		"Лібертарыянец"
+	],
+	personalPeopleMainTypes = [
 		"Інтэлект і творчасць",
 		"Дабрыня і сумленнасць",
 		"Прыгажосць і здароўе",
 		"Улада і багацце",
 		"Мужнасць і стойкасць",
-		"Гумар і любоў да жыцця",
-	},
-	personalLifeMainTypes = {
+		"Гумар і любоў да жыцця"
+	],
+	personalLifeMainTypes = [
 		"Сям'я і дзеці",
 		"Кар'ера і грошы",
 		"Забавы і адпачынак",
@@ -148,15 +148,15 @@
 		"Паляпшэнне свету",
 		"Самаразвіццё",
 		"Прыгажосць і мастацтва",
-		"Вядомасць і ўплыў",
-	},
-	personalBlyadTypes = {
+		"Вядомасць і ўплыў"
+	],
+	personalBlyadTypes = [
 		"Рэзка адмоўна",
 		"Адмоўны",
 		"Кампраміс",
 		"Нейтральны",
-		"Пазітыўная",
-	},
+		"Пазітыўная"
+	],
 	
 	friends = "Сябры",
 	friendsOnline = "Інтэрнэт сябры",
