--- a/Applications/VK.app/Localizations/Bengali.lang
+++ b/Applications/VK.app/Localizations/Bengali.lang
@@ -28,7 +28,7 @@
 	userSubscribedToYou = "আপনি সদস্যতা",
 	userIsYourFriend = "তোমার বন্ধু আছে",
 	
-	profileCounters = [
+	profileCounters = {
 		{
 			field = "অনুসারী",
 			description = "অনুসারী",
@@ -48,8 +48,8 @@
 		{
 			field = "অডিও",
 			description = "শ্রুতি",
-		}
-	],
+		},
+	},
 	profileShowAdditional = "বিস্তারিত দেখাও",
 	profileHideAdditional = "বিস্তারিত তথ্য লুকান",
 	profileTitleMainInformation = "মৌলিক তথ্য",
@@ -83,7 +83,7 @@
 		alcohol = "OTN ",
 		smoking = "OTN ",
 	},
-	months = [
+	months = {
 		"জানুয়ারী",
 		"ফেব্রুয়ারী",
 		"মার্চ",
@@ -95,10 +95,10 @@
 		"সেপ্টেম্বর",
 		"অক্টোবর",
 		"নভেম্বর",
-		"ডিসেম্বর"
-	],
-	relationStatuses = [
-		[
+		"ডিসেম্বর",
+	},
+	relationStatuses = {
+		{
 			"অবিবাহিত",
 			"একটি বান্ধবী আছে",
 			"নিযুক্ত",
@@ -107,9 +107,9 @@
 			"সক্রিয় অনুসন্ধানে",
 			"প্রেমিক",
 			"নাগরিক বিবাহে",
-			[0] = "অনির্দিষ্ট"
-		],
-		[
+			[0] = "অনির্দিষ্ট",
+		},
+		{
 			"অবিবাহিত",
 			"একটি বন্ধু আছে",
 			"নিযুক্ত",
@@ -118,10 +118,10 @@
 			"সক্রিয় অনুসন্ধানে",
 			"প্রেমিক",
 			"নাগরিক বিবাহে",
-			[0] = "অনির্দিষ্ট"
-		]
-	],
-	personalPoliticalTypes = [
+			[0] = "অনির্দিষ্ট",
+		},
+	},
+	personalPoliticalTypes = {
 		"কমিউনিস্ট",
 		"সমাজতান্ত্রিক",
 		"পরিমিত",
@@ -130,17 +130,17 @@
 		"রাজতান্ত্রিক",
 		"অতি রক্ষণশীল",
 		"উদাসীন",
-		"স্বাধীনতাবাদী"
-	],
-	personalPeopleMainTypes = [
+		"স্বাধীনতাবাদী",
+	},
+	personalPeopleMainTypes = {
 		"বুদ্ধিমত্তা এবং সৃজনশীলতা",
 		"উদারতা এবং সততা",
 		"সৌন্দর্য এবং স্বাস্থ্য",
 		"ক্ষমতা এবং সম্পদ",
 		"সাহস এবং অধ্যবসায়",
-		"হাস্যরস এবং জীবনের ভালবাসা"
-	],
-	personalLifeMainTypes = [
+		"হাস্যরস এবং জীবনের ভালবাসা",
+	},
+	personalLifeMainTypes = {
 		"পরিবার ও সন্তান",
 		"ক্যারিয়ার এবং অর্থ",
 		"বিনোদন এবং চিত্তবিনোদন",
@@ -148,15 +148,15 @@
 		"বিশ্বের উন্নতি",
 		"স্ব-উন্নয়ন",
 		"সৌন্দর্য এবং শিল্প",
-		"খ্যাতি এবং প্রভাব"
-	],
-	personalBlyadTypes = [
+		"খ্যাতি এবং প্রভাব",
+	},
+	personalBlyadTypes = {
 		"তীব্রভাবে নেতিবাচক",
 		"নেতিবাচক",
 		"আপস",
 		"নিরপেক্ষ",
-		"ইতিবাচক"
-	],
+		"ইতিবাচক",
+	},
 	
 	friends = "বন্ধুরা",
 	friendsOnline = "অনলাইন বন্ধুরা",
