--- a/Applications/VK.app/Localizations/Bulgarian.lang
+++ b/Applications/VK.app/Localizations/Bulgarian.lang
@@ -28,7 +28,7 @@
 	userSubscribedToYou = "Абониран за вас",
 	userIsYourFriend = "Имаш приятели",
 	
-	profileCounters = [
+	profileCounters = {
 		{
 			field = "последователи",
 			description = "последователи",
@@ -48,8 +48,8 @@
 		{
 			field = "аудиозаписи",
 			description = "аудио",
-		}
-	],
+		},
+	},
 	profileShowAdditional = "Покажи детайли",
 	profileHideAdditional = "Скриване на подробна информация",
 	profileTitleMainInformation = "Основна информация",
@@ -83,7 +83,7 @@
 		alcohol = "OTN. ",
 		smoking = "OTN. ",
 	},
-	months = [
+	months = {
 		"януари",
 		"февруари",
 		"Март",
@@ -95,10 +95,10 @@
 		"Септември",
 		"октомври",
 		"ноември",
-		"декември"
-	],
-	relationStatuses = [
-		[
+		"декември",
+	},
+	relationStatuses = {
+		{
 			"Неженен",
 			"имам приятелка",
 			"сгоден",
@@ -107,9 +107,9 @@
 			"в активно търсене",
 			"любовник",
 			"в граждански брак",
-			[0] = "неопределено"
-		],
-		[
+			[0] = "неопределено",
+		},
+		{
 			"Неженен",
 			"имам приятел",
 			"сгоден",
@@ -118,10 +118,10 @@
 			"в активно търсене",
 			"любовник",
 			"в граждански брак",
-			[0] = "неопределено"
-		]
-	],
-	personalPoliticalTypes = [
+			[0] = "неопределено",
+		},
+	},
+	personalPoliticalTypes = {
 		"комунистически",
 		"социалистически",
 		"умерено",
@@ -130,17 +130,17 @@
 		"Монархически",
 		"Ултраконсервативна",
 		"Безразличен",
-		"либертарианец"
-	],
-	personalPeopleMainTypes = [
+		"либертарианец",
+	},
+	personalPeopleMainTypes = {
 		"Интелигентност и креативност",
 		"Доброта и честност",
 		"Красота и здраве",
 		"Власт и богатство",
 		"Смелост и постоянство",
-		"Хумор и любов към живота"
-	],
-	personalLifeMainTypes = [
+		"Хумор и любов към живота",
+	},
+	personalLifeMainTypes = {
 		"Семейство и деца",
 		"Кариера и пари",
 		"Забавление и отдих",
@@ -148,15 +148,15 @@
 		"Подобряване на света",
 		"Саморазвитие",
 		"Красота и изкуство",
-		"Слава и влияние"
-	],
-	personalBlyadTypes = [
+		"Слава и влияние",
+	},
+	personalBlyadTypes = {
 		"Рязко отрицателно",
 		"Отрицателно",
 		"компромис",
 		"Неутрален",
-		"Положителен"
-	],
+		"Положителен",
+	},
 	
 	friends = "Приятели",
 	friendsOnline = "Онлайн приятели",
