--- a/Applications/VK.app/Localizations/Hindi.lang
+++ b/Applications/VK.app/Localizations/Hindi.lang
@@ -28,7 +28,7 @@
 	userSubscribedToYou = "आपको सब्सक्राइब किया गया",
 	userIsYourFriend = "आपके मित्र हैं",
 	
-	profileCounters = [
+	profileCounters = {
 		{
 			field = "अनुयायियों",
 			description = "अनुयायियों",
@@ -48,8 +48,8 @@
 		{
 			field = "ऑडियो",
 			description = "ऑडियो",
-		}
-	],
+		},
+	},
 	profileShowAdditional = "प्रदर्शन का विवरण",
 	profileHideAdditional = "विस्तृत जानकारी छुपाएं",
 	profileTitleMainInformation = "मूलभूत जानकारी",
@@ -83,7 +83,7 @@
 		alcohol = "ओटीएन। ",
 		smoking = "ओटीएन। ",
 	},
-	months = [
+	months = {
 		"जनवरी",
 		"फ़रवरी",
 		"मार्च",
@@ -95,10 +95,10 @@
 		"सितंबर",
 		"अक्टूबर",
 		"नवंबर",
-		"दिसंबर"
-	],
-	relationStatuses = [
-		[
+		"दिसंबर",
+	},
+	relationStatuses = {
+		{
 			"अविवाहित",
 			"एक प्रेमिका है",
 			"काम में लगा हुआ",
@@ -107,9 +107,9 @@
 			"सक्रिय खोज में",
 			"प्रेम करनेवाला",
 			"नागरिक विवाह में",
-			[0] = "अनिर्दिष्ट"
-		],
-		[
+			[0] = "अनिर्दिष्ट",
+		},
+		{
 			"अविवाहित",
 			"दोस्त है",
 			"काम में लगा हुआ",
@@ -118,10 +118,10 @@
 			"सक्रिय खोज में",
 			"प्रेम करनेवाला",
 			"नागरिक विवाह में",
-			[0] = "अनिर्दिष्ट"
-		]
-	],
-	personalPoliticalTypes = [
+			[0] = "अनिर्दिष्ट",
+		},
+	},
+	personalPoliticalTypes = {
 		"कम्युनिस्ट",
 		"समाजवादी",
 		"संतुलित",
@@ -130,17 +130,17 @@
 		"राजतंत्रीय",
 		"बहुत रुदीवादी",
 		"उदासीन",
-		"मुक्तिवादी"
-	],
-	personalPeopleMainTypes = [
+		"मुक्तिवादी",
+	},
+	personalPeopleMainTypes = {
 		"बुद्धि और रचनात्मकता",
 		"दयालुता और ईमानदारी",
 		"सौंदर्य और स्वास्थ्य",
 		"शक्ति और धन",
 		"साहस और दृढ़ता",
-		"हास्य और जीवन का प्यार"
-	],
-	personalLifeMainTypes = [
+		"हास्य और जीवन का प्यार",
+	},
+	personalLifeMainTypes = {
 		"परिवार और बच्चे",
 		"करियर और पैसा",
 		"मनोरंजन और मनोरंजन",
@@ -148,15 +148,15 @@
 		"दुनिया में सुधार",
 		"स्वयं का विकास",
 		"सौंदर्य और कला",
-		"प्रसिद्धि और प्रभाव"
-	],
-	personalBlyadTypes = [
+		"प्रसिद्धि और प्रभाव",
+	},
+	personalBlyadTypes = {
 		"तीव्र नकारात्मक",
 		"नकारात्मक",
 		"समझौता",
 		"तटस्थ",
-		"सकारात्मक"
-	],
+		"सकारात्मक",
+	},
 	
 	friends = "मित्र",
 	friendsOnline = "ऑनलाइन मित्र",
