--- a/Applications/VK.app/Localizations/Ukrainian.lang
+++ b/Applications/VK.app/Localizations/Ukrainian.lang
@@ -28,7 +28,7 @@
 	userSubscribedToYou = "Підписався на вас",
 	userIsYourFriend = "У вас є друзі",
 	
-	profileCounters = [
+	profileCounters = {
 		{
 			field = "послідовників",
 			description = "послідовників",
@@ -48,8 +48,8 @@
 		{
 			field = "аудіо",
 			description = "аудіо",
-		}
-	],
+		},
+	},
 	profileShowAdditional = "Показати деталі",
 	profileHideAdditional = "Приховати детальну інформацію",
 	profileTitleMainInformation = "Основна інформація",
@@ -83,7 +83,7 @@
 		alcohol = "ОТН. ",
 		smoking = "ОТН. ",
 	},
-	months = [
+	months = {
 		"січень",
 		"лютий",
 		"марш",
@@ -95,10 +95,10 @@
 		"Вересень",
 		"жовтень",
 		"Листопад",
-		"Грудень"
-	],
-	relationStatuses = [
-		[
+		"Грудень",
+	},
+	relationStatuses = {
+		{
 			"не одружений",
 			"мати дівчину",
 			"заручений",
@@ -107,9 +107,9 @@
 			"в активному пошуку",
 			"коханець",
 			"у цивільному шлюбі",
-			[0] = "невизначено"
-		],
-		[
+			[0] = "невизначено",
+		},
+		{
 			"не одружений",
 			"мати друга",
 			"заручений",
@@ -118,10 +118,10 @@
 			"в активному пошуку",
 			"коханець",
 			"у цивільному шлюбі",
-			[0] = "невизначено"
-		]
-	],
-	personalPoliticalTypes = [
+			[0] = "невизначено",
+		},
+	},
+	personalPoliticalTypes = {
 		"комуністичний",
 		"Соціалістичний",
 		"Помірний",
@@ -130,17 +130,17 @@
 		"Монархічний",
 		"Ультраконсервативний",
 		"Байдужий",
-		"лібертаріанський"
-	],
-	personalPeopleMainTypes = [
+		"лібертаріанський",
+	},
+	personalPeopleMainTypes = {
 		"Інтелект і креативність",
 		"Доброта і чесність",
 		"Краса і здоров'я",
 		"Влада і багатство",
 		"Мужність і наполегливість",
-		"Гумор і любов до життя"
-	],
-	personalLifeMainTypes = [
+		"Гумор і любов до життя",
+	},
+	personalLifeMainTypes = {
 		"Сім'я і діти",
 		"Кар'єра і гроші",
 		"Розваги та відпочинок",
@@ -148,15 +148,15 @@
 		"Покращення світу",
 		"Самовдосконалення",
 		"Краса і мистецтво",
-		"Слава і вплив"
-	],
-	personalBlyadTypes = [
+		"Слава і вплив",
+	},
+	personalBlyadTypes = {
 		"Різко негативний",
 		"Негативний",
 		"Компроміс",
 		"Нейтральний",
-		"Позитивний"
-	],
+		"Позитивний",
+	},
 	
 	friends = "Друзі",
 	friendsOnline = "Інтернет друзі",
